# lua_godot

./: .gdignore  .gitmodules  CMakeLists.txt  README.md  SConstruct  build.bat  build.sh  build_addon.bat  build_addon.ps1  build_addon.py  example_mod.lua  lua.lib  lua_bridge.exp  lua_bridge.lib  rebuild_all.ps1  test.lua  test_autoload.gd  test_autoload_simple.lua  test_autoload_singleton.lua  test_extension.gd  test_lua_bridge.gd  test_path_resolution.gd
example_mod/: main.lua
lua-5.4.8/: .gdignore
lua-5.4.8/doc/: OSIApproved_100X125.png.import
lua-5.4.8/src/: lapi.windows.template_debug.x86_64.obj.import  lauxlib.windows.template_debug.x86_64.obj.import  lbaselib.windows.template_debug.x86_64.obj.import  (+31 more)
project_example/: QUICK_START.md  README.md  icon.png.import  icon.svg.import  inventory_manager_example.gd  lua_bridge.gdextension  lua_bridge_manager.gd  main.gd  main.tscn  project.godot  run_autoload_test.gd  setup.bat  setup.ps1  test.lua  test_autoload.gd  test_autoload_debug.gd  test_autoload_manual.gd  test_autoload_minimal.gd  test_autoload_minimal.lua  test_autoload_simple.gd  test_inventory_from_lua.lua  test_inventory_manager.lua  test_json_fix.gd  test_mod_loading_fixed.gd  test_path_fix.gd  test_path_fix.tscn  test_path_resolution.gd  test_path_resolution.tscn  test_simple_mod_loading.gd  test_singleton_timing.gd
src/: .gdignore  bridge.cpp  bridge.h  bridge.windows.template_debug.x86_64.obj.import  mod_resource_loader.cpp  mod_resource_loader.h  register_types.cpp  register_types.h  register_types.windows.template_debug.x86_64.obj.import
(+27 files in other folders)
